feat/create-more-api-and-add-cors

--- a/core/views/displayAllGardens.ejs
+++ b/core/views/displayAllGardens.ejs
@@ -38,7 +38,7 @@
               <%= garden.sensorNum %>
             </td>
             <td class='select'>
-              <a class='button' href='/garden/<%= garden.gardenId %>'>Select</a>
+              <a class='button' href='/api/v1/garden/<%= garden.gardenId %>'>Select</a>
             </td>
           </tr>
           <% }); %>
