--- a/core/public/css/dashboardStyle.css
+++ b/core/public/css/dashboardStyle.css
@@ -34,6 +34,7 @@
   --chart-font-color: #444;
   --chart-axis-color: #444;
 }
+
 /* Dark Theme Variables */
 .dark-theme-variables {
   --color-background: #090d3e;
@@ -62,6 +63,7 @@
 html {
   font-size: 14px;
 }
+
 body {
   width: 100vw;
   height: 100vh;
@@ -72,63 +74,80 @@ body {
   overflow-x: hidden;
   color: var(--color-dark-variant);
 }
+
 .container {
-    display: grid;
-    width: 100%;
-    margin: 0 auto;
-    gap: 1.8rem;
-    grid-template-columns: 14rem 61rem 26rem;
+  display: grid;
+  width: 100%;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 14rem 61rem 26rem;
 }
+
 a {
   color: var(--color-dark);
 }
+
 img {
   display: block;
   width: 100%;
 }
+
 h1 {
   font-weight: 800;
   font-size: 1.8rem;
 }
+
 h2 {
   font-size: 1.4rem;
 }
+
 h3 {
   font-size: 0.87rem;
 }
+
 h4 {
   font-size: 0.8rem;
 }
+
 h5 {
   font-size: 0.77rem;
 }
+
 small {
   font-size: 0.75rem;
 }
+
 .profile-photo {
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 50%;
   overflow: hidden;
 }
+
 .text-muted {
   color: var(--color-info-light);
 }
+
 p {
   color: var(--color-dark-variant);
 }
+
 b {
   color: var(--color-dark-variant);
 }
+
 .primary {
   color: var(--color-primary);
 }
+
 .danger {
   color: var(--color-danger);
 }
+
 .success {
   color: var(--color-success);
 }
+
 .warning {
   color: var(--color-warning);
 }
@@ -137,23 +156,28 @@ b {
 aside {
   height: 100vh;
 }
+
 aside .top {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 1.4rem;
 }
+
 aside .logo {
   display: flex;
   gap: 0.8rem;
 }
+
 aside .logo img {
   width: 2rem;
   height: 2re;
 }
+
 aside .close {
   display: none;
 }
+
 /***** Sidebar Links*****/
 aside .sidebar {
   display: flex;
@@ -162,6 +186,7 @@ aside .sidebar {
   position: relative;
   top: 3rem;
 }
+
 aside h3 {
   font-weight: 500;
 }
@@ -193,16 +218,19 @@ aside .sidebar a.active {
   color: var(--color-primary);
   margin-left: 0;
 }
+
 aside .sidebar a.active:before {
   content: "";
   width: 6px;
   height: 100%;
   background: var(--color-primary);
 }
+
 aside .sidebar a.active span {
   color: var(--color-primary);
   margin-left: calc(1rem - 6px);
 }
+
 aside .sidebar a:hover {
   color: var(--color-primary);
 }
@@ -221,7 +249,8 @@ main .insights {
   grid-template-columns: repeat(4, 1fr);
   gap: 1.6rem;
 }
-main .insights > div {
+
+main .insights>div {
   background: var(--color-white);
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
@@ -230,11 +259,11 @@ main .insights > div {
   transition: all 300ms ease;
 }
 
-main .insights > div:hover {
+main .insights>div:hover {
   box-shadow: none;
 }
 
-main .insights > div span {
+main .insights>div span {
   background: var(--color-primary);
   padding: 0.5rem;
   border-radius: 50%;
@@ -242,22 +271,23 @@ main .insights > div span {
   font-size: 2rem;
 }
 
-main .insights > div.temperature span {
+main .insights>div.temperature span {
   background: var(--color-insight-1);
 }
 
-main .insights > div.humidity span {
+main .insights>div.humidity span {
   background: var(--color-insight-2);
 }
 
-main .insights > div.pressure span {
+main .insights>div.pressure span {
   background: var(--color-insight-3);
 }
-main .insights > div.altitude span {
+
+main .insights>div.altitude span {
   background: var(--color-insight-4);
 }
 
-main .insights > div .middle {
+main .insights>div .middle {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -266,6 +296,15 @@ main .insights > div .middle {
 main .insights h3 {
   margin: 1rem 0 0.6rem;
   font-size: 1rem;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+}
+
+.unit {
+  padding: 10px;
 }
 
 /************* End of Insights ******************/
@@ -283,6 +322,7 @@ main .history-charts {
   text-align: center;
   box-shadow: var(--box-shadow);
 }
+
 main .history-charts:hover {
   box-shadow: none;
 }
@@ -299,11 +339,13 @@ main .histories h2 {
 .right {
   margin-top: 1.4rem;
 }
+
 .right .top {
   display: flex;
   justify-content: end;
   gap: 2rem;
 }
+
 .right .top button {
   display: none;
 }
@@ -338,6 +380,7 @@ main .histories h2 {
 .right .gauge-charts {
   margin-top: 2rem;
 }
+
 .right .gauge-charts .item {
   background: var(--color-white);
   display: flex;
@@ -350,6 +393,7 @@ main .histories h2 {
   box-shadow: var(--box-shadow);
   transition: all 300ms ease;
 }
+
 .right .gauge-charts .item:hover {
   box-shadow: none;
 }
@@ -380,6 +424,7 @@ main .histories h2 {
     width: 94%;
     grid-template-columns: 7rem auto 23rem;
   }
+
   aside .logo h2 {
     display: none;
   }
@@ -387,16 +432,20 @@ main .histories h2 {
   aside .sidebar h3 {
     display: none;
   }
+
   aside .sidebar a {
     width: 5.6rem;
   }
+
   aside .sidebar a:last-child {
     position: relative;
     margin-top: 1.8rem;
   }
+
   main .insights {
     grid-template-columns: 1fr;
   }
+
   main .histories {
     width: 94%;
     position: absolute;
@@ -404,6 +453,7 @@ main .histories h2 {
     transform: translateX(-50%);
     margin: 2rem 0 0 8.8rem;
   }
+
   main .histories .history-charts {
     grid-template-columns: 1fr;
     width: 54vw;
@@ -415,10 +465,12 @@ main .histories h2 {
     width: 94%;
     grid-template-columns: 12rem auto 23rem;
   }
+
   main .insights {
     grid-template-columns: repeat(2, 1fr);
     gap: 1.6rem;
   }
+
   main .histories .history-charts {
     grid-template-columns: 1fr;
     align-items: center;
@@ -432,6 +484,7 @@ main .histories h2 {
     grid-template-columns: 1fr;
     /* height: 100vh; */
   }
+
   aside {
     position: fixed;
     left: -100%;
@@ -444,24 +497,30 @@ main .histories h2 {
     display: none;
     animation: showMenu 400ms ease forwards;
   }
+
   @keyframes showMenu {
     to {
       left: 0;
     }
   }
+
   aside .logo {
     margin-left: 1rem;
   }
+
   aside .logo h2 {
     display: inline;
   }
+
   aside .sidebar h3 {
     display: inline;
   }
+
   aside .sidebar a {
     width: 100%;
     height: 3.4rem;
   }
+
   /* aside .sidebar a:last-child {
     position: absolute;
     bottom: 5rem;
@@ -470,15 +529,18 @@ main .histories h2 {
     display: inline-block;
     cursor: pointer;
   }
+
   main {
     margin: 8rem 2rem 2rem 2rem;
     padding: 0 1rem;
   }
+
   main .histories {
     position: relative;
     margin: 3rem 0 0 0;
     width: 100%;
   }
+
   main .histories .history-charts {
     width: 100%;
     justify-content: center;
@@ -488,10 +550,12 @@ main .histories h2 {
     justify-content: center;
     align-items: center;
   }
+
   .right {
     width: 90%;
     margin: 0 auto 0rem auto;
   }
+
   .right .top {
     position: fixed;
     top: 0;
@@ -505,11 +569,13 @@ main .histories h2 {
     z-index: 2;
     box-shadow: 0 1rem 1 rem var(--color-light);
   }
+
   .right .top .theme-toggler {
     width: 4.4rem;
     position: absolute;
     right: 2rem;
   }
+
   .right .profile .info {
     display: none;
   }
@@ -522,6 +588,7 @@ main .histories h2 {
     position: absolute;
     left: 1rem;
   }
+
   .right .top button span {
     font-size: 2rem;
   }
@@ -533,6 +600,7 @@ main .histories h2 {
     grid-template-columns: 1fr;
     margin: 1rem 0 1rem 0;
   }
+
   main {
     margin: 5rem 1rem 1rem 1rem;
     padding: 0 1rem;
@@ -542,7 +610,8 @@ main .histories h2 {
   main .insights {
     gap: 0.4rem;
   }
-  main .insights > div {
+
+  main .insights>div {
     padding: 0.4rem;
   }
 
